Bug 78886 - FILESAVE: Corrupt: Extra <w:fldChar w:fldCharType="end" /> getting added in hyperlink after RT
Summary: FILESAVE: Corrupt: Extra <w:fldChar w:fldCharType="end" /> getting added in h...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 07:02 UTC by Dinesh
Modified: 2014-05-22 07:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains hyperlink, fldchar, sdt (118.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 07:02 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-05-19 07:02:36 UTC
Created attachment 99300 [details]
File contains hyperlink, fldchar, sdt

Problem description: 
Corruption: After RT extra <w:fldChar w:fldCharType="end"/> tag is getting added in hyperlink causing file to corrupt

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Current behavior:
File is getting corrupt after RT

Expected behavior:
File should open without any error
              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Jorendc 2014-05-20 17:31:41 UTC
Repro Version: 4.3.0.0.alpha1+
Build ID: cd11bc699ac50af4f560ed5f2e5e7903de0898b8
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-05-20_08:02:54
Comment 2 Commit Notification 2014-05-22 07:47:16 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5547beb47e6eb94cf917a319fcc426a36fed7af

fdo#78886 File getting corrupted after Roundtrip due to fieldChar



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.